--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <form class="form-inline my-2 my-lg-0">
                         <div class="call_text">
                             <ul>
-                                <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i><span class="padding_left_15">Vamos conversar : +01 1234567890</span></a></li>
+                                <li><a href=" https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"><i class="fa fa-phone" aria-hidden="true"></i><span class="padding_left_15">Vamos conversar : (62) 9 8276-9392</span></a></li>
                                 <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i><span class="padding_left_15">Atendemos Inhumas e Região</span></a></li>
                             </ul>
                         </div>
@@ -134,7 +134,7 @@
                             <br>ELÉTRICA EM GERAL
                             <br>AR-CONDICIONADOS EM GERAL
                             <br>E DEMAIS SERVIÇOS. </p>
-                        <div class="read_bt"><a href="#">Solicitar um orçamento</a></div>
+                        <div class="read_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site">Solicitar um orçamento</a></div>
                     </div>
                 </div>
             </div>
@@ -171,82 +171,10 @@
                             <figure><img src="images/img-3.png"></figure>
                         </div>
                         <h3 class="introduction_text">Infraestrutura</h3>
-                        <div class="seemore_bt"><a href="#">Solicitar um orçamento</a></div>
+                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site">Solicitar um orçamento</a></div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <!-- furnitures section end -->
-    <!-- blog section start -->
-    <div class="blog_section layout_padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h1 class="blog_taital">Algumas Cases de sucesso</h1>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="blog_section_2 layout_padding">
-                <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="blog_box">
-                            <div class="blog_img"><img src="images/blog-img1.png"></div>
-                            <p class="chair_text">Chairs</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="blog_box">
-                            <div class="blog_img"><img src="images/blog-img2.png"></div>
-                            <p class="chair_text">Chair</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="blog_box">
-                            <div class="blog_img"><img src="images/blog-img3.png"></div>
-                            <p class="chair_text">Sideboard</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="blog_box">
-                            <div class="blog_img"><img src="images/blog-img4.png"></div>
-                            <p class="chair_text">Chairs</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="blog_box">
-                            <div class="blog_img"><img src="images/blog-img5.png"></div>
-                            <p class="chair_text">Chair</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="blog_box">
-                            <div class="blog_img"><img src="images/blog-img6.png"></div>
-                            <p class="chair_text">Sideboard</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="blog_box">
-                            <div class="blog_img"><img src="images/blog-img7.png"></div>
-                            <p class="chair_text">Chairs</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="blog_box">
-                            <div class="blog_img"><img src="images/blog-img8.png"></div>
-                            <p class="chair_text">Chair</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="blog_box">
-                            <div class="blog_img"><img src="images/blog-img9.png"></div>
-                            <p class="chair_text">Sideboard</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="readmore_bt"><a href="#">Solicitar um orçamento</a></div>
         </div>
     </div>
     <!-- blog section end -->
