--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesoeet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -59,20 +60,14 @@
                         <div class="call_text">
                             <ul>
                                 <li><a href=" https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"><i class="fa fa-phone" aria-hidden="true"></i><span class="padding_left_15">Vamos conversar : (62) 9 8276-9392</span></a></li>
-                                <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i><span class="padding_left_15">Atendemos Inhumas e Região</span></a></li>
+                                <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i><span class="padding_left_15">Atendemos Inhumas, Goiânia e Região</span></a></li>
                             </ul>
                         </div>
                     </form>
                 </div>
             </nav>
             <div class="custome_menu">
-                <ul>
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="#">Quem somos</a></li>
-                    <li><a href="#">Serviços</a></li>
-                    <li><a href="#">Fale Conosco</a></li>
-                    <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                </ul>
+
             </div>
         </div>
     </div>
@@ -106,6 +101,8 @@
                     </div>
                 </div>
             </div>
+
+            <br>&nbsp;<br>
         </div>
     </div>
     <!-- banner section end -->
@@ -134,7 +131,9 @@
                             <br>ELÉTRICA EM GERAL
                             <br>AR-CONDICIONADOS EM GERAL
                             <br>E DEMAIS SERVIÇOS. </p>
-                        <div class="read_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site">Solicitar um orçamento</a></div>
+                        <div class="read_bt">
+                            <a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"> <i class="fa fa-whatsapp"></i> Pedir orçamento</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -157,21 +156,23 @@
                             <figure><img src="images/img-1.png"></figure>
                         </div>
                         <h3 class="introduction_text">Instalações Empresariais</h3>
-                        <div class="seemore_bt"><a href="#">Solicitar um orçamento</a></div>
+                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
                     </div>
                     <div class="col-md-4">
                         <div class="hover01 column">
                             <figure><img src="images/img-2.png"></figure>
                         </div>
                         <h3 class="introduction_text">Reparos</h3>
-                        <div class="seemore_bt active"><a href="#">Solicitar um orçamento</a></div>
+                        <div class="seemore_bt active">
+                            <a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"> <i class="fa fa-whatsapp"></i> Pedir orçamento</a>
+                        </div>
                     </div>
                     <div class="col-md-4">
                         <div class="hover01 column">
                             <figure><img src="images/img-3.png"></figure>
                         </div>
                         <h3 class="introduction_text">Infraestrutura</h3>
-                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site">Solicitar um orçamento</a></div>
+                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
                     </div>
                 </div>
             </div>
@@ -226,6 +227,11 @@
             <p class="copyright_text">2021 &copy; Todos os direitos reservados. Desenvolvido por:<a target="_blank" href="https://hardeasy.com.br">Jonatan Santos</a></p>
         </div>
     </div>
+
+    <a href="https://wa.me/5562982769392?text=Queria%20fazer%20um%20orçamento%20|%20Link%20enviado%20pelo%20site:%20www.wdsservicos.com.br" style="position:fixed;width:60px;height:60px;bottom:40px;right:40px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888;
+  z-index:1000;" target="_blank">
+        <i style="margin-top:16px" class="fa fa-whatsapp"></i>
+    </a>
     <!-- copyright section end -->
     <!-- Javascript files-->
     <script src="js/jquery.min.js"></script>
