--- a/index.html
+++ b/index.html
@@ -80,24 +80,32 @@
                     <div class=" banner_main">
                         <h3 class="banner_taital">Ar-Condicionados</h3>
                         <img src="images/1.png" alt="#" />
+                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
+
                     </div>
                 </div>
                 <div class="item">
                     <div class=" banner_main">
                         <h3 class="banner_taital">Cercas Elétricas</h3>
                         <img src="images/2.png" alt="#" />
+                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
+
                     </div>
                 </div>
                 <div class="item">
                     <div class=" banner_main">
                         <h3 class="banner_taital">Interfones</h3>
                         <img src="images/3.png" alt="#" />
+                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
+
                     </div>
                 </div>
                 <div class="item">
                     <div class=" banner_main">
                         <h3 class="banner_taital">Câmeras de Segurança</h3>
                         <img src="images/4.png" alt="#" />
+                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
+
                     </div>
                 </div>
             </div>
