--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="item">
                     <div class=" banner_main">
                         <h3 class="banner_taital">Ar-Condicionados</h3>
-                        <img src="images/1.png" alt="#" />
+                        <img src="images/e0405f3e70f00f680bd9208227175174.jpg" alt="#" />
                         <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
 
                     </div>
