--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class=" banner_main">
                         <h3 class="banner_taital">Ar-Condicionados</h3>
                         <img src="images/2.png" alt="#" />
-                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
+                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:[%20Ar%20Condicionado%20]%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
 
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                     <div class=" banner_main">
                         <h3 class="banner_taital">Cercas Elétricas</h3>
                         <img src="images/1.png" alt="#" />
-                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
+                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:[%20Cerca%20Eletrica]%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
 
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                     <div class=" banner_main">
                         <h3 class="banner_taital">Interfones</h3>
                         <img src="images/3.png" alt="#" />
-                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
+                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:[%20Interfone%20]%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
 
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                     <div class=" banner_main">
                         <h3 class="banner_taital">Câmeras de Segurança</h3>
                         <img src="images/4.png" alt="#" />
-                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
+                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:[%20Cameras%20de%20Segurança%20]%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
 
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                             <br>AR-CONDICIONADOS EM GERAL
                             <br>E DEMAIS SERVIÇOS. </p>
                         <div class="read_bt">
-                            <a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"> <i class="fa fa-whatsapp"></i> Pedir orçamento</a>
+                            <a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20[%20Serviços%20DO%20Site%20]%20link%20enviado%20pelo%20site"> <i class="fa fa-whatsapp"></i> Pedir orçamento</a>
                         </div>
                     </div>
                 </div>
@@ -164,7 +164,7 @@
                             <figure><img src="images/img-1.png"></figure>
                         </div>
                         <h3 class="introduction_text">Instalações Empresariais</h3>
-                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
+                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20[%20Empresarial%20]%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
                     </div>
                     <div class="col-md-4">
                         <div class="hover01 column">
@@ -172,7 +172,7 @@
                         </div>
                         <h3 class="introduction_text">Reparos</h3>
                         <div class="seemore_bt active">
-                            <a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"> <i class="fa fa-whatsapp"></i> Pedir orçamento</a>
+                            <a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20[%20Reparos%20]%20link%20enviado%20pelo%20site"> <i class="fa fa-whatsapp"></i> Pedir orçamento</a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -180,7 +180,7 @@
                             <figure><img src="images/img-3.png"></figure>
                         </div>
                         <h3 class="introduction_text">Infraestrutura</h3>
-                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
+                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20[%20Infraestrutura%20]%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
                     </div>
                 </div>
             </div>
