--- a/index.html
+++ b/index.html
@@ -84,19 +84,27 @@
 
                     </div>
                 </div>
-                <div class="item">
+				<div class="item">
                     <div class=" banner_main">
-                        <h3 class="banner_taital">Cercas Elétricas</h3>
-                        <img src="images/1.png" alt="#" />
-                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:[%20Cerca%20Eletrica]%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
+                        <h3 class="banner_taital">Motor P/ Portão</h3>
+                        <img src="images/5.jpg" alt="#" />
+                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:[%20Motor%20para%20portão|%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
 
                     </div>
-                </div>
+                </div>				
                 <div class="item">
                     <div class=" banner_main">
                         <h3 class="banner_taital">Interfones</h3>
                         <img src="images/3.png" alt="#" />
                         <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:[%20Interfone%20]%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
+
+                    </div>
+                </div>
+                <div class="item">
+                    <div class=" banner_main">
+                        <h3 class="banner_taital">Cercas Elétricas</h3>
+                        <img src="images/1.png" alt="#" />
+                        <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:[%20Cerca%20Eletrica]%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
 
                     </div>
                 </div>
