--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
     </div>
     <!-- about section end -->
-    <!-- furnitures section start -->
+    
     <div class="furnitures_section layout_padding">
         <div class="container">
             <div class="row">
@@ -189,6 +189,29 @@
                         </div>
                         <h3 class="introduction_text">Infraestrutura</h3>
                         <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20[%20Infraestrutura%20]%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- furnitures section start -->
+    <div class="solar layout_padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h1 class="furnitures_taital">Revendedor Autorizado Intelbras</h1>
+                    <p class="furnitures_text">Profissional autorizado/credenciado pela Intelbras para levar até você <br> garantia e qualidade</p>
+                </div>
+            </div>
+            <div class="furnitures_section_2">
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8">
+                        <div class="column">
+                            <figure class="border-rouded"><img src="images/solar.gif"></figure>
+                            <br>
+                            <div class="seemore_bt"><a href="https://wa.me/5562982769392?text=Solicitar%20Orçamento:%20[%20Energia%20Solar%20]%20link%20enviado%20pelo%20site"><i class="fa fa-whatsapp"></i> Pedir orçamento solar</a></div>
+                        </div>                        
                     </div>
                 </div>
             </div>
